--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "description": "",
   "dependencies": {
     "ejs": "^3.1.10",
+    "ejs-mate": "^4.0.0",
     "express": "^4.21.2",
     "method-override": "^3.0.0",
-    "mongoose": "^8.9.2"
+    "mongoose": "^8.9.2",
+    "morgan": "^1.10.0"
   }
 }
